WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68210
Fix const correctness on accessors in LayerChromium
https://bugs.webkit.org/show_bug.cgi?id=68210
Summary
Fix const correctness on accessors in LayerChromium
Shawn Singh
Reported
2011-09-15 19:28:55 PDT
The patch (coming in a moment) fixes const on preserves3d() and replicaLayer().
Attachments
Patch
(2.09 KB, patch)
2011-09-15 19:50 PDT
,
Shawn Singh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shawn Singh
Comment 1
2011-09-15 19:50:03 PDT
Created
attachment 107587
[details]
Patch
WebKit Review Bot
Comment 2
2011-09-16 17:06:24 PDT
Comment on
attachment 107587
[details]
Patch Clearing flags on attachment: 107587 Committed
r95336
: <
http://trac.webkit.org/changeset/95336
>
WebKit Review Bot
Comment 3
2011-09-16 17:06:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug