Fixed const correctness on accessors in LayerChromium https://bugs.webkit.org/show_bug.cgi?id=68210

Patch by Shawn Singh <shawnsingh@chromium.org> on 2011-09-16
Reviewed by James Robinson.

Code cleanup related to creating unit testing.

* platform/graphics/chromium/LayerChromium.h:
(WebCore::LayerChromium::preserves3D):
(WebCore::LayerChromium::replicaLayer):

Canonical link: https://commits.webkit.org/84206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95336 268f45cc-cd09-0410-ab3c-d52691b4dbfc